feat(db): saving and retrieving data :sparkle: :book:

--- a/templates/post.html.twig
+++ b/templates/post.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %} 
 
 {% block main %}
-<h1>Post {{ postId }}</h1>
+  <h3>{{ post.title }}</h3>
+  <p> {{ post.body }} </p>
 {% endblock  %}
